...
      return;
    }
    setPage(page + 1);
    fetchFlashcards();
  };
  return (
    <View style={styles.container} testID="flashcardScreen">
      <FlatList
        contentContainerStyle={styles.listContent}
        data={flashcardList}
        renderItem={renderRow}
        keyExtractor={keyExtractor}
        initialNumToRender={oneScreensWorth}
...
