...
      return;
    }
    setPage(page + 1);
    fetchLessons();
  };
  return (
    <View style={styles.container} testID="lessonScreen">
      <FlatList
        contentContainerStyle={styles.listContent}
        data={lessonList}
        renderItem={renderRow}
        keyExtractor={keyExtractor}
        initialNumToRender={oneScreensWorth}
...
